# mcp-zen-of-docs

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  package-lock.json  package.json  playwright.config.js  pyproject.toml  quickstart-snapshot.md  zensical.toml
.copilot/plans/: revised-design-plan-v2.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/agents/: README.md  docs-init.agent.md  zen-docs-architect.agent.md  zen-docs-creator.agent.md  zen-docs-polisher.agent.md  zen-docs-reviewer.agent.md  zen-docs-shipper.agent.md  zen-docs-writer.agent.md
.github/hooks/: default-post-init.hook.md  team-bootstrap-pre-init.hook.md
.github/instructions/: config.instructions.md  docs.instructions.md  env.instructions.md  frameworks.instructions.md  project.instructions.md  python-models.instructions.md  python-modules.instructions.md  server-tools.instructions.md  src-python.instructions.md  testing.instructions.md  tests.instructions.md  yaml.instructions.md
.github/prompts/: init-checklist.prompt.md
.github/workflows/: cicd.yml  docs-deploy.yml
.mcp-zen-of-docs/init/: init.bash.sh  init.powershell.ps1  init.zsh.sh  state.json
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion_checklist.md
docs/: already-prefixed.md  api.md  architecture.md  changelog.md  contributing.md  deployment.md  docs-internal  index.md  philosophy.md  quickstart.md  readme.md  standards.md  toc.md  troubleshooting.md
docs/contributing/: adding-framework.md  adding-primitive.md  development.md  index.md
docs/frameworks/: docusaurus.md  index.md  starlight.md  vitepress.md  zensical.md
docs/guides/: detect-profile-act.md  index.md  intro.md  primitives.md  troubleshooting.md  why-zen-docs.md
docs/javascripts/: extra.js
docs/reference/: api.md
docs/stylesheets/: extra.css  mkdocstrings.css
overrides/: 404.html  home.html  main.html
prompts/: README.md  docs-constitution.prompt.md  docs-implement.prompt.md  docs-pipeline.prompt.md  docs-plan.prompt.md  docs-specify.prompt.md  docs-tasks.prompt.md
scripts/: __init__.py  contrast_check.py
tests/: test_agent_config.py  test_architecture_baseline.py  test_architecture_guardrails.py  test_artifact_layout.py  test_asset_conversion.py  test_batch_scaffold.py  test_cli.py  test_copilot_artifact_spec.py  test_create_tools.py  test_docstring_optimizer.py  test_domain_migration.py  test_e2e_core_flow.py  test_ephemeral_init.py  test_frameworks_base.py  test_frontmatter.py  test_generators.py  test_infrastructure_adapters.py  test_interfaces.py  test_middleware.py  test_migration.py  test_models.py  test_modules.py  test_orchestrator.py  test_pipeline_context.py  test_pipeline_phases.py  test_scope.py  test_server.py  test_template_quality.py  test_validators.py  test_visual_assets.py  test_write_doc_and_svg_asset.py
(+126 files in other folders)
